compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__modules__alias_aliased_constant.snap
---
source: compiler-core/src/javascript/tests/modules.rs
expression: "\nimport rocket_ship.{ x as y }\npub const z = y\n"
---
----- SOURCE CODE
-- rocket_ship.gleam
pub const x = 1

-- main.gleam

import rocket_ship.{ x as y }
pub const z = y


----- COMPILED JAVASCRIPT
import * as $rocket_ship from "../rocket_ship.mjs";
import { x as y } from "../rocket_ship.mjs";

export const z = y;
