compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__modules__constant.snap
---
source: compiler-core/src/javascript/tests/modules.rs
expression: "\nimport rocket_ship\npub fn go() { rocket_ship.x }\n"
---
----- SOURCE CODE

import rocket_ship
pub fn go() { rocket_ship.x }


----- COMPILED JAVASCRIPT
import * as $rocket_ship from "../rocket_ship.mjs";

export function go() {
  return $rocket_ship.x;
}
