compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__modules__different_package_import.snap
---
source: compiler-core/src/javascript/tests/modules.rs
expression: "import one\npub fn go() { one.go() }\n"
---
----- SOURCE CODE
import one
pub fn go() { one.go() }


----- COMPILED JAVASCRIPT
import * as $one from "../../other_package/one.mjs";

export function go() {
  return $one.go();
}
