compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__modules__nested_module_constant.snap
---
source: compiler-core/src/javascript/tests/modules.rs
expression: "\nimport rocket_ship/launcher\npub fn go() { launcher.x }\n"
---
----- SOURCE CODE

import rocket_ship/launcher
pub fn go() { launcher.x }


----- COMPILED JAVASCRIPT
import * as $launcher from "../rocket_ship/launcher.mjs";

export function go() {
  return $launcher.x;
}
