compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__modules__nested_nested_fn_call.snap
---
source: compiler-core/src/javascript/tests/modules.rs
expression: "import one/two/three\npub fn go() { three.go() }"
---
----- SOURCE CODE
import one/two/three
pub fn go() { three.go() }

----- COMPILED JAVASCRIPT
import * as $three from "../one/two/three.mjs";

export function go() {
  return $three.go();
}
